syntax = "proto3";

option go_package = "/internal/pkg/genproto";

import "muallimah-submodule/protos/common.proto";

package protos;

service PostService {
    rpc CreatePost(PostCreate) returns (Void);
    rpc GetPost(ById) returns (PostGet);
    rpc UpdatePost(PostUpdate) returns (Void);
    rpc DeletePost(ById) returns (Void);
    rpc GetPosts(Pagination) returns (stream PostList);
    rpc AddPostPicture(PostPicture) returns (Void);
    rpc DeletePostPicture(PostPicture) returns (Void);
}
message PostCreate {
    string title = 1;
    string content = 2;
    repeated string PictureUrls = 3;
}
message PostGet {
    string id = 1;
    string title = 2;
    string content = 3;
    repeated string PictureUrls = 4;
    string CreatedAt = 5;
}
message PostUpt {
    string Title = 1;
    string Content = 2;
}
message PostUpdate {
    string id = 1;
    PostUpt Body = 2;
}

message PostList {
    repeated PostGet Posts = 1;
    int32 TotalCount = 2;
    Pagination Pagination = 3;
}
message PostPicture {
    string PostId = 1;
    string PictureUrl = 2;
}